--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ section{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: url(/banner.jpg) no-repeat;
+    background: url(banner.jpg) no-repeat;
     background-position: center;
     background-size: cover;
     padding-top: 17rem;
